Language selector text color not showing problem fixed & fixed navbar paddding for mobile devices

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -89,7 +89,7 @@
     flex-direction: column;
     align-items: center;
     position: absolute;
-    top: 60px;
+    top: 90px;
     left: 0;
     width: 100%;
     background-color: var(--modal);
@@ -133,7 +133,7 @@
   gap: 15px;
 }
 .lang-btn {
-  background-color: transparent;
+  background-color: var(--modal);
   border: none;
   color: var(--text-color);
   font-size: 16px;
